welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:7: error: value % is not a member of java.awt.Color
    setCouleurBrosse(T(i+1)% T.length)
                           ^